# nxp-se050

./: .gitignore  LICENSE  README.md
se050/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  conv.py
se050/src/: lib.rs  se050.rs  t1.rs  types.rs
se050/src/tests/: mod.rs  test_twi.rs
se050_info/: .gitignore  Cargo.toml  memory.x
se050_info/.cargo/: Config.toml
se050_info/src/: main.rs
