[package]
name = "se050"
version = "0.0.1"
authors = [
	"Jan Nordholz <j.nordholz@tu-berlin.de",
	"Robert Stojic <Robert.Stojic@ptb.de>"
]


edition = "2021"
repository = "https://github.com/robertstojicptb/se050"
license = "Apache-2.0 OR MIT"
description = "Driver for NXP SE050"

[dependencies]
byteorder = { version = "1", default-features = false }
crc16 = "0.4"
delog = "0.1"
embedded-hal = "*"
heapless = "0.7"

[features]
default = []

log-all = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []
